chore(gpio-overlay): fix install recipe and insert new line for reading api

--- a/gpio-driver-overlay/Makefile
+++ b/gpio-driver-overlay/Makefile
@@ -11,7 +11,7 @@ clean:
 
 install:
 	sudo insmod gpio-driver-overlay.ko
-# 	sudo chmod 666 /dev/simple-tft
+	sudo chmod 666 /dev/simplegpio
 
 uninstall:
 	sudo rmmod gpio-driver-overlay
