chore(tft): rewrite dt overlay

--- a/tft-screen-driver/tft-custom.dts
+++ b/tft-screen-driver/tft-custom.dts
@@ -3,33 +3,43 @@
 
 / {
     compatible = "brcm,bcm2711";
-    
+
     fragment@0 {
         target = <&spi0>;
         __overlay__ {
             #address-cells = <1>;
             #size-cells = <0>;
             status = "okay";
-            
-            tft_display@0 {
-                compatible = "raio,raio8875";  // Change to your actual display
+            pinctrl-names = "default";
+            pinctrl-0 = <&spi0_pins>;
+
+            tft_display: tft@0 {
+                compatible = "spidev";  // Para testing - cambiar después por tu driver
                 reg = <0>;
                 spi-max-frequency = <8000000>;
-                spi-mode = <3>;  // Most TFTs use mode 0, not 3
+                spi-cpha;
+                spi-cpol;
                 status = "okay";
                 
-                reset-gpios = <&gpio 23 1>;   // Active LOW (1), not HIGH (0)
+                /* GPIO 23 as output for display control */
+                dc-gpios = <&gpio 23 0>;
             };
         };
     };
-    
+
     fragment@1 {
         target = <&gpio>;
         __overlay__ {
+            spi0_pins: spi0_pins {
+                brcm,pins = <9 10 11>;
+                brcm,function = <4>; /* ALT0 */
+                brcm,pull = <0>; /* No pull */
+            };
+
             tft_pins: tft_pins {
-                brcm,pins = <23>;  // Reset and DC pins
-                brcm,function = <1>;   // GPIO output
-                brcm,pull = <0>;
+                brcm,pins = <23>;
+                brcm,function = <1>; /* Output */
+                brcm,pull = <0>; /* No pull */
             };
         };
     };
